# rbfblender

./: .gitignore  CMakeLists.txt
source/: pluginSetup.cpp  rbfblender.cpp  rbfblender.h  tests.py
source/rbfblender/: __init__.py
